# iterable-api

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
iterable/: client.py  helpers.py
iterable/resources/: __init__.py  campaigns.py  commerce.py  events.py  export.py  metadata.py  sms.py  templates.py  web_push.py  workflows.py
src/iterable/: __init__.py  client.py  exceptions.py
src/iterable/resources/: base.py  campaigns.py  channels.py  commerce.py  email.py  events.py  experiments.py  in_app.py  lists.py  message_types.py  push.py  templates.py  users.py  utils.py
tests/: test_client.py  test_mapper.py  test_resources.py
