[tool.poetry]
name = "iterable-api"
version = "0.2.0"
description = "Iterable API wrapper"
readme = "README.md"
authors = ["Alex Kahn <alexkahn@users.noreply.github.com>"]
license = "GPL-3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
homepage = "https://github.com/alexkahn/iterable-api"
repository = "https://github.com/alexkahn/iterable-api"
packages = [
    {include = "iterable", from = "src"}
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/alexkahn/iterable-api/issues"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
